# OptimalPoissonBoundary

./: CMakeLists.txt  Dijkstra.cpp  Dijkstra.h  Mesh.h  OptimalBoundaries.cpp  OptimalBoundaries.h  Parameterization.cpp  Parameterization.h  main.cpp  vcpkg.json
MyGL/: CMakeLists.txt  Camera.cpp  Camera.h  LineSegment.cpp  LineSegment.h  LogConsole.cpp  LogConsole.h  Mesh.cpp  Mesh.h  PickVertex.cpp  PickVertex.h  PointCloud.cpp  PointCloud.h  Shader.cpp  Shader.h  Window.cpp  Window.h
data/: seam_vertices.txt
data/shaders/: basic.vert  pick_vertex.frag  pick_vertex.vert
